// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`corpus: app-framework > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 15,
}
`;

exports[`corpus: assistant > soft metrics 1`] = `
{
  "bends": 20,
  "crossings": 17,
}
`;

exports[`corpus: compute > soft metrics 1`] = `
{
  "bends": 22,
  "crossings": 11,
}
`;

exports[`corpus: echo > soft metrics 1`] = `
{
  "bends": 25,
  "crossings": 6,
}
`;

exports[`corpus: edge > soft metrics 1`] = `
{
  "bends": 30,
  "crossings": 22,
}
`;

exports[`corpus: pipeline > soft metrics 1`] = `
{
  "bends": 9,
  "crossings": 3,
}
`;
